--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
   <div class="bottom-container"><br>
-    <a class="footer-link" href="www.linkedin.com/in/eric-collins-1631a292">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/eric-r-collins/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/Eric_Collins14">Twitter</a>
     <a class="footer-link" href="https://www.akamai.com/">Akamai</a>
     <p><a href="images/resume-12-06-18.pdf" download>My Resume</a></p>
